Fixed the css of dark mode and responsive

--- a/src/App.css
+++ b/src/App.css
@@ -303,7 +303,8 @@ nav svg {
 
 .about p {
     font-size: 1.2em;
-    color: var(--main-red);
+   color: #003366;
+   
      
     
 }
@@ -314,6 +315,8 @@ nav svg {
 .about .professional-summary{
     font-size: 1.2em;
    margin: 1rem;
+   color: #00274D;
+  
    
 }
 
@@ -326,13 +329,20 @@ nav svg {
 }
 
 .recommendation {
-    margin-left: 1rem;
-    padding-left: 1rem;
+    margin: 1rem;
+    padding: 1rem;
+    box-shadow: 3px 3px 5px 0 #E1C4C9;
+    padding-left: 2rem;
     
 }
 
-.recommendation p{
-  opacity: 0.9;
+.recommendation:hover {
+ transform: translateY(-2px);
+  /* Slight lift on hover */
+}
+
+.recommendation h3 {
+  color: var(--navlinks)
 }
 
 .button-container {
@@ -353,13 +363,23 @@ nav svg {
   .licenses {
     padding: 1rem;
     margin: 1rem;
-   padding-bottom: 0;
+    margin-left: 5rem;
+    border-left: 2px solid var(--marigold);
+  
+  
+  }
+
+  .licenses h3 {
+    color: #34858F;
+    padding: 1rem;
+    padding-bottom: 0;
   }
 
   .licenses ul {
     list-style-type: none;
   margin-left: 1rem;
-  color: var(--navlinks);
+  color: #00274D;
+  
   
   
   }
@@ -382,27 +402,50 @@ nav svg {
     color: var(--strawberry);
   }
 
+  
+  hr.eol {
+    width:80%;
+    display: block;
+    margin: 0 auto;
+    height: 2px;
+    background-color: blueviolet;   
+    
+  }
+
   .experience {
     margin: 1rem;
     padding: 1rem;
-    margin-top: 0;
+    box-shadow: -3px -3px 5px 0 var(--marigold);
    
   }
+
+  .experience h3 {
+    padding: 1rem;
+    color: #B8A48D;
+   text-align: center;
+  
+  }
+  
 
   .experience ul {
     font-size: 1.2em;
     margin-bottom: 20px;
-    color: var(--main-red);
+    color: #00274D;
     opacity: 0.9;
+    padding-left: 2rem;
     
+   
+        
   }
 
   .experience ul li {
     margin-bottom: 20px;
+    margin-left: 1rem;
   }
 
     .technologies {
         margin: 1rem;
+       
     }
   
     .technologies h3 {
@@ -415,6 +458,7 @@ nav svg {
         justify-content: space-evenly;
         gap: 20px;
         margin: 20px 0;
+       padding: 1rem;
     }
     
     .about i {
@@ -423,7 +467,8 @@ nav svg {
   
     .outro {
         padding: 1rem;
-        margin: 1rem;
+        margin: 1rem;       
+       
         
     }
 
@@ -444,8 +489,9 @@ nav svg {
     }
 
     .redirect {
-        margin-left: 1rem;
-        padding-left: 1rem;
+        margin: 1rem;
+        padding: 1rem;
+   
         
     }
 
@@ -904,16 +950,22 @@ nav svg {
 .stack a:hover {
   color: orangered;
 }
+.projects {
+  background-color: var(--marigold);
+}
 /* Contact */
  /* Contact */
-
- 
+.contact {
+  background-color: #FFE6E6;
+  padding: 1rem;
+  box-shadow: 2px 2px 2px 2px white;
+}
  .contact .ty {
   padding: 1rem;
   text-align: center;
   font-size: 24px;
   color: var(--navlinks);
-  background-color: #F5F5F5;
+  background-color: white;
   margin: 1rem;
   border-radius: 50px;
   box-shadow: 0 1px 2px var(--navlinks);
@@ -930,17 +982,21 @@ nav svg {
 .contact img {
   height: 300px;
   width: auto;
- 
+ border-radius: 12px;
+ margin: 20px;
+ box-shadow: 2px 2px 5px lightgray;
 }
 
 .contact .thankyou {        
   display:block;
   margin: 0 auto;
   padding: 2rem;
+
+
 }
 
 .contact-info {
-  background-color: #F0F0F0; /* light ivory */
+  background-color:white; /* light ivory */
   color: var(--neutral-dark); /* charcoal */
   padding: 20px;
   border-radius: 10px;
@@ -949,13 +1005,13 @@ nav svg {
   font-family: 'Lusitana', serif; /* or whichever font you are using */
   text-align: center; 
   margin: 0 auto;
-  margin-top: 10px;
   margin-bottom: 1rem;
+  
 
 }
 
 .contact-info h2 {
-color: var(--main-red);
+color: #4A4A4A;
 padding-bottom: 0;
 margin-bottom: 0;
 
@@ -980,7 +1036,7 @@ margin-bottom: 0;
 .email h3 {
   padding: 0;
   margin: 0;
-  color: var(--main-red);
+  color: #4A4A4A;
 
 }
 
@@ -998,7 +1054,7 @@ margin-bottom: 0;
 .contact-info h4,
 .contact-info h5 {
   padding-top: 0.5rem;
-  color: var(--main-red);
+  color: #4A4A4A;
   padding-bottom: 0;
   margin-bottom: 0;
 }
@@ -1026,7 +1082,7 @@ margin-bottom: 0;
 }
 
 .twitter h4 {
-  color: var(--main-red);
+  color: #4A4A4A;
   padding: 0;
   margin: 0;
 }
@@ -1233,6 +1289,7 @@ body.dark .evergreen-card:hover {
 
 .code-links a:hover {
   color: var(--navlinks); /* vibrant coral */
+  background-color: #27474E;
 }
 
 .fontawesome-icon {
@@ -1412,6 +1469,10 @@ body.dark .code-links a:hover {
   
  }
 /* Contact Page */
+body.dark .contact {
+  background-color: #0B1720;
+  border: 1px solid  #0B1720;;
+}
 body.dark .contact-info {
   background-color:  #22282B;
   box-shadow: 0 1px 2px #84B3C0;
@@ -1433,8 +1494,8 @@ body.dark .contact-info h5 {
   color: white;
 }
 
-body.dark .thankyou {
-  display: none;
+body.dark .licenses ul {
+  color: var(--navlinks)
 }
 
 body.dark .ty {
@@ -1453,6 +1514,29 @@ body.dark .ty span {
   background-color: #0B1720;
 }
 
+body.dark .professional-summary {
+  color: #84B3C0;
+}
+
+
+body.dark .recommendation {
+  box-shadow: none;
+}
+
+body.dark .experience {
+  box-shadow: none;
+  background-color: black;
+  border-radius: 5px;
+ 
+}
+
+body.dark .projects {
+  background-color: #0B1720;
+}
+
+body.dark .thankyou {
+  display: none;
+}
 /* Responsive Web Design */
 @media (max-width: 768px) {
   .hamburger-menu {
@@ -1541,7 +1625,6 @@ body.dark .ty span {
 
   .projects {
     background-color: var(--marigold);
-    box-shadow: 0 4px 8px var(--navlinks);
   }
 
   .projects ul {
@@ -1551,9 +1634,22 @@ body.dark .ty span {
   justify-content: center; /* Center items vertically */
   }
 
+  .evergreen-card h2,
+  .atlas-card h2 {
+    font-weight: bold;
+  }
+
+  .contact .thankyou {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .contact .ty {
+    font-size: 18px;
+  }
+
   
  }
   
-
-
-
+ 
